<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <Button
        android:id="@+id/trackCloseBtn"
        android:layout_width="67dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/close" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/trackTitle"
            android:layout_width="186dp"
            android:layout_height="match_parent"
            android:hint="@string/track_name_default"
            android:inputType="textNoSuggestions" />

        <Button
            android:id="@+id/trackSaveNameBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/save_name" />

    </LinearLayout>

    <Button
        android:id="@+id/trackStopBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/include_play_selected"/>

        <CheckBox
            android:id="@+id/trackPlaySelectedCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loop"/>

        <CheckBox
            android:id="@+id/trackLoopCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/trackDeleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete" />

</LinearLayout>