<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <Button
        android:id="@+id/projectCloseBtn"
        android:layout_width="67dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/close" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/projectTitleEditText"
            android:layout_width="186dp"
            android:layout_height="match_parent"
            android:hint="@string/project_name_default"
            android:inputType="textNoSuggestions" />

        <Button
            android:id="@+id/projectSaveNameBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/save_name" />

    </LinearLayout>

    <Button
        android:id="@+id/projectDeleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete" />

</LinearLayout>