<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_alert_start" />

    <TextView
        android:id="@+id/errorAlertMessageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_alert_end" />

    <Button
        android:id="@+id/errorAlertMainActivityBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu_btn" />

</LinearLayout>