<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/trackNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track_name_default" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/trackCurrentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp"
            android:text="@string/track_time_default" />

        <SeekBar
            android:id="@+id/trackSeekBar"
            android:layout_width="269dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="57dp"
            android:layout_marginStart="57dp" />

        <TextView
            android:id="@+id/trackDurationTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="11dp"
            android:layout_marginRight="11dp"
            android:text="@string/track_time_default" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ToggleButton
            android:id="@+id/trackPlayToggleBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/play"
            android:textOn="@string/pause" />

        <ToggleButton
            android:id="@+id/trackRecordToggleBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="115dp"
            android:text="@string/recording_start"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="115dp" />

        <Button
            android:id="@+id/trackSettingsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="11dp"
            android:text="@string/settings"
            android:layout_alignParentRight="true"
            android:layout_marginRight="11dp" />

    </RelativeLayout>

</LinearLayout>